[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ORB.POND"
version = "0.0.0"
description = "Final project for PHYS3120 Spring 2025"
authors = [{ name = "Matvey Shakula", email = "matvey@gatech.edu" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["numpy", "pygame", "pytest"]

[project.scripts]
orbpond = "opg.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"opg" = "src/opg"
"opg.assets" = "assets"
"opg.tests" = "tests"

[tool.pytest.ini_options]
testpaths = ["tests"]
